Imperfect working example bf drastic redesign

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>Bayesian diagram</title>
 <style>
-body {font: 400 14px sans-serif;}
-.emphasized {font: bold 18px sans-serif;} // rect {fill: #CCC;}
+body {font: 400 85% sans-serif;}
+// .emphasized {font: bold 18px sans-serif;} // rect {fill: #CCC;}
 .hide {display: none;}
 </style>
 </head>
