--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Bayesian diagram</title>
+<meta charset="UTF-8">
 <script type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js">
 </script>
