--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js">
 </script>
+<base target='_top'>
 </head>
 
 <body>
