--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Bayesian diagram</title>
 <meta charset="UTF-8">
+<base target='_parent'>
 <script type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js">
 </script>
