--- a/chlamydia.html
+++ b/chlamydia.html
@@ -2,6 +2,7 @@
 <head>
 <title>Bayesian diagram</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <base target='_parent'>
 <script type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js">
